# LibOSWebServer

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: LinkPackage.cmake  Linux.cmake  SourceList.cmake  Windows.cmake
libs/binary/: libos.lib
libs/include/libos/: DataType.h  Defines.h  Error.h  FileIO.h  NativeWindow.h  NetIO.h  Window.h
libs/include/libos/extendstd/: Iterator.h  LookUpTable.h
src/: CMakeLists.txt  Http.cpp  Http.hpp  Main.cpp
